@@ -214,7 +214,7 @@ class path_conv
   unsigned __stdcall ndisk_links (DWORD);
   char *normalized_path;
   size_t normalized_path_size;
-  void set_normalized_path (const char *) __attribute__ ((regparm (2)));
+  void set_normalized_path (const char *, bool) __attribute__ ((regparm (3)));
   DWORD get_symlink_length () { return symlink_length; };
  private:
   DWORD symlink_length;  
